--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <meta property="og:title" content="Portal Bilistiwa Bogor - Islamic Education Dashboard" />
     <meta property="og:description" content="Internal portal for waqf management, scholarships, and Islamic education support" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
 
     <!-- Google Fonts for Arabic text support -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
